# monday-rs

./: .gitignore  Cargo.toml  README.md  board_detail.txt  monday.graphql
queries/: assign_user.graphql  board.graphql  board_columns.graphql  board_detail.graphql  board_items.graphql  board_list.graphql  change_status.graphql  create_item.graphql  create_update.graphql  current_user.graphql  group_list.graphql  item_detail.graphql  item_list.graphql  move_item.graphql  user_list.graphql
src/: app.rs  cache.rs  components.rs  events.rs  lib.rs  main.rs  monday.rs  objects.rs  queries.rs  utils.rs  views.rs
