[package]
name = "monday-rs"
version = "0.1.0"
authors = ["Nathan Duncan <natefduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
clap = "2.33.3"
graphql_client = { version = "0.10.0", features = ["reqwest-blocking"] }
reqwest = { version = "0.11.4", features = ["json","blocking"] }
serde = "1.0.126"
serde_json = "1.0.64"
tui = { version = "0.15.0", features = ["crossterm"] }
