[package]
name = "monday"
version = "0.1.1"
authors = ["Nathan Duncan <natefduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.5"
clap = "2.33.3"
crossterm = "0.20.0"
graphql_client = { version = "0.10.0", features = ["reqwest-blocking"] }
reqwest = { version = "0.11.4", features = ["json","blocking"] }
serde = "1.0.126"
serde_json = "1.0.64"
tui = { version = "0.15.0", features = ["crossterm"] }
aho-corasick = "0.7.18"
dirs = "3.0.2"
